fixed css of var-tables and console

--- a/src/components/var-table/table.scss
+++ b/src/components/var-table/table.scss
@@ -17,3 +17,8 @@
   width: 100%;
   background-color: #ff9b42;
 }
+
+table {
+  box-shadow: 0 0 0 2px #1c272b;
+  border-style: hidden !important;
+}
