line markers works

--- a/src/components/code-editor/code-editor.css
+++ b/src/components/code-editor/code-editor.css
@@ -4,3 +4,7 @@
     background: linear-gradient(to right, #b67171 30%, transparent 30%);
     display: inline-block;
 }
+.replacement_marker {
+    position: absolute;
+    background-color: #FFFF00;
+ }
