--- a/src/components/code-editor/code-editor.css
+++ b/src/components/code-editor/code-editor.css
@@ -4,7 +4,12 @@
     background: linear-gradient(to right, #b67171 30%, transparent 30%);
     display: inline-block;
 }
+
 .replacement_marker {
     position: absolute;
     background-color: #FFFF00;
  }
+
+.ace-content {
+    padding-top: 10px !important;
+}
