animated left panel

--- a/src/components/event-row/tags.scss
+++ b/src/components/event-row/tags.scss
@@ -1,7 +1,11 @@
-.e_type_tag {
-
+.ant-scroll-number {
+    border-radius: 2px !important;
+    width: 35px !important;
+    height: 20px!important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 
 .event-count {
     background-color: #1a262b;
