added json vars

--- a/src/components/var-table/table.scss
+++ b/src/components/var-table/table.scss
@@ -11,6 +11,9 @@
 .ant-switch-checked {
   background-color: #717171 !important;
 }
+.pretty-json-container{
+   background-color: #313131 !important;
+}
 .ant-cascader-input {
   border: none !important;
 }
