Added scrollers for left panel small panels and added wait for external indication

--- a/src/components/var-table/table.scss
+++ b/src/components/var-table/table.scss
@@ -80,6 +80,8 @@ table {
 
 ::-webkit-scrollbar {
   background: rgb(49, 49, 49);
+  width: 6px !important;
+  margin-left: 1px;
 }
 
 ::-webkit-scrollbar-thumb {
