fixed css issue

--- a/src/components/var-table/table.scss
+++ b/src/components/var-table/table.scss
@@ -37,6 +37,10 @@
   background-color: rgb(49, 49, 49);
 }
 
+.ant-cascader-menu-item-active {
+  background: #ff9b42 !important;
+}
+
 .ant-cascader-menu-item:hover {
   background: #ff9b42 !important;
 }
