--- a/src/components/file-uploader/file-uploader.scss
+++ b/src/components/file-uploader/file-uploader.scss
@@ -5,6 +5,14 @@
     border: 1px solid #ff9b42 !important;
     border-radius: 3px !important;
   }
+
+  .ant-btn-primary[disabled] {
+    background: #D3D3D3 !important;
+    border-color: #d9d9d9 !important;
+    box-shadow: none !important;
+    color: rgba(0,0,0,.25) !important;
+    text-shadow: none !important;
+  }
 }
 
 .ant-modal-confirm-body-wrapper {
