--- a/src/components/file-uploader/file-uploader.scss
+++ b/src/components/file-uploader/file-uploader.scss
@@ -4,6 +4,10 @@
     color: #ff9b42 !important;
     border: 1px solid #ff9b42 !important;
     border-radius: 3px !important;
+
+    &:hover {
+      color: white !important;
+    }
   }
 
   .ant-btn-primary[disabled] {
