fixed some css issues and added reset functionality

--- a/src/components/var-table/table.scss
+++ b/src/components/var-table/table.scss
@@ -85,6 +85,7 @@ table {
 ::-webkit-scrollbar {
   background: rgb(49, 49, 49);
   width: 6px !important;
+  height: 4px !important;
   margin-left: 1px;
 }
 
