--- a/src/components/code-editor/code-editor.scss
+++ b/src/components/code-editor/code-editor.scss
@@ -13,3 +13,27 @@
 .ace-content {
     padding-top: 10px !important;
 }
+
+.ace_search_field {
+    border-radius: 5px 0px 0px 5px;
+}
+
+.prev, .next {
+    border-radius: 0px;
+}
+
+.ace_button {
+    border-radius: 4px;
+}
+
+.ace_button.checked {
+    border-radius: 4px;
+    border: 1px solid orange;
+}
+
+.ace_search_form.ace_nomatch {
+    outline: 0px;
+    border: .5px solid red;
+    border-radius: 5px;
+}
+
